--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -24,6 +25,13 @@
           <tr>
             <td><a href="#"><%= url %></a></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form class="form-inline" action="/urls/<%= url %>/delete" method="POST">
+                <div class="form-group mb-2">
+                  <button type="submit" class="btn btn-outline-danger">Delete</button>
+                </div>
+              </form>
+            </td>
           </tr>
         <% } %>
       </tbody>
