--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,14 +17,18 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <td><a href="#"><%= url %></a></td>
+            <td><a href="/urls/<%= url %>"><%= url %></a></td>
             <td><%= urls[url] %></td>
+            <td>
+              <a href="urls/<%= url %>"><button type="submit" class="btn btn-outline-primary">Edit</button></a>
+            </td>
             <td>
               <form class="form-inline" action="/urls/<%= url %>/delete" method="POST">
                 <div class="form-group mb-2">
