--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,7 +12,18 @@
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>" target="_blank"><%= shortURL %></a></p>
+      </div>
+      <hr style="margin: 0;" />
+      <div style="padding-top: 20px; padding-left: 10px;">
+        <h5 style="text-align: left;">Edit</h5>
+        <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
+          <div class="form-group mb-2">
+            <label for="longURL">New URL:</label>
+            <input class="form-control" type="text" name="longURL" placeholder="<%= longURL %>" style="width: 300px; margin: 1em">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
       </div>
     <div class="card-footer text-muted"></div>
   </div>
