--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -30,7 +30,7 @@
           <button type="submit" class="btn btn-primary">Register</button>
         </div>
         <div>
-          <p>Already registered?<a href="#">Login</a></p>
+          <p>Already registered?<a href="/login">Login here</a></p>
         </div>
       </form>
     </div>
