--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -9,7 +9,6 @@
 <body>
   <%- include('partials/_header') %>
   <div>
-    <div class="card-header"></div>
     <div style="padding-top: 20px; padding-left: 10px;">
       <% if (error) { %>
         <div style="color: red; font-size: 20px">
@@ -19,11 +18,11 @@
       <h3 style="margin-bottom: 15px;">Create Account</h3>
       <form style="display: flex; flex-direction: column; align-items: flex-start;" action="/register" method="POST">
         <div class="form-group mb-2">
-          <label for="email">Email address</label>
+          <label style="font-weight: bold;" for="email">Email address</label>
           <input id="email" class="form-control" type="email" name="email" placeholder="Enter email" style="width: 300px;">
         </div>
         <div class="form-group mb-2">
-          <label for="password">Password</label>
+          <label style="font-weight: bold;" for="password">Password</label>
           <input id="password" class="form-control" type="password" name="password" placeholder="Password" style="width: 300px;">
         </div>
         <div style="margin-top: 10px;">
@@ -34,7 +33,6 @@
         </div>
       </form>
     </div>
-    <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
